2024-02-01T08:08:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7738099375 # 76
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-01
* notice: last 14d: unq all: 4 31
* notice: prev accum: outdated-unq outdated-all / unq all: 312 656 / 329 687
* notice: next accum: outdated-unq outdated-all / unq all: 312 656 / 330 688
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-18 2024-02-01]

2024-02-01T00:31:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7734326220 # 75
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-01
* notice: last 14d: unq all: 4 31
* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 329 686
* notice: next accum: outdated-unq outdated-all / unq all: 312 656 / 329 687
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-17] / [2024-01-31]

2024-01-31T08:08:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7722977636 # 73
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
* notice: last 14d: unq all: 4 31
* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 328 685
* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 329 686
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-31]

2024-01-31T00:30:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7719337137 # 72