@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-01T08:08:28Z",
-  "count_outdated" : 656,
-  "uniques_outdated" : 312,
-  "count" : 688,
+  "timestamp" : "2024-02-02T00:30:11Z",
+  "count_outdated" : 659,
+  "uniques_outdated" : 314,
+  "count" : 689,
   "uniques" : 330,
   "clones" : [
-    {
-      "timestamp": "2024-01-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-01-19T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
