@@ -1,12 +1,7 @@
 {
-  "count": 31,
-  "uniques": 4,
+  "count": 30,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2024-01-18T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-01-19T00:00:00Z",
       "count": 2,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-02-01T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
