@@ -1,3 +1,12 @@
+2024-02-02T00:30:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7749545847 # 78
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
+* notice: last 14d: unq all: 3 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 312 656 / 330 688
+* notice: next accum: outdated-unq outdated-all / unq all: 314 659 / 330 689
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2024-01-18] / [2024-02-01]
+
 2024-02-01T08:08:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7738099375 # 76
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-01
